# Mannequin

./: .gitmodules  README.md
Code/: CMakeLists.txt
Code/Arbitor/: CMakeLists.txt
Code/Arbitor/T3Bootstrap/: CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
Code/Arbitor/T3Foundation/: CMakeLists.txt  T3Foundation.cs  packages.config
Code/Arbitor/T3Foundation/Application/: T3Application.cs
Code/Arbitor/T3Foundation/Plugin/: IT3Plugin.cs
Code/Arbitor/T3Foundation/Properties/: AssemblyInfo.cs
Code/Arbitor/Themes/: Syncfusion.Themes.basetheme.WPF.nuspec  Syncfusion.Themes.basetheme.WPF_2017.csproj  Syncfusion.Themes.basetheme.WPF_2017.sln  Syncfusion.Themes.basetheme.WPF_NET60.csproj  Syncfusion.Themes.basetheme.WPF_NET60.sln  Syncfusion.Themes.basetheme.WPF_NET80.csproj  Syncfusion.Themes.basetheme.WPF_NET80.sln  basethemeSkinHelper.cs
Code/Arbitor/Themes/AutoComplete/: AutoComplete.xaml
Code/Arbitor/Themes/BusyIndicator/: BusyIndicator.xaml
Code/Arbitor/Themes/ButtonAdv/: ButtonAdv.xaml
Code/Arbitor/Themes/CalendarEdit/: CalendarEdit.xaml
Code/Arbitor/Themes/CardView/: CardView.xaml
Code/Arbitor/Themes/CheckListBox/: CheckListBox.xaml
Code/Arbitor/Themes/ChromelessWindow/: ChromelessWindow.xaml
Code/Arbitor/Themes/Clock/: Clock.xaml
Code/Arbitor/Themes/ColorEdit/: ColorEdit.xaml
Code/Arbitor/Themes/ColorPicker/: ColorPicker.xaml
Code/Arbitor/Themes/ColorPickerPalette/: ColorPickerPalette.xaml
Code/Arbitor/Themes/ComboBoxAdv/: ComboBoxAdv.xaml
Code/Arbitor/Themes/Common/: Brushes.xaml  Common.xaml
Code/Arbitor/Themes/CurrencyTextBox/: CurrencyTextBox.xaml
Code/Arbitor/Themes/DateTimeEdit/: DateTimeEdit.xaml
Code/Arbitor/Themes/DockingManager/: DockingManager.xaml
Code/Arbitor/Themes/DocumentContainer/: DocumentContainer.xaml
Code/Arbitor/Themes/DoubleTextBox/: DoubleTextBox.xaml
Code/Arbitor/Themes/DropDownButtonAdv/: DropDownButtonAdv.xaml
Code/Arbitor/Themes/EditControl/: EditControl.xaml
Code/Arbitor/Themes/Fluent/: FluentHelper.cs  RevealItem.cs  RevealItemAdorner.cs  SfAcrylicPanel.cs
Code/Arbitor/Themes/FontListBox/: FontListBox.xaml
Code/Arbitor/Themes/FontListComboBox/: FontListComboBox.xaml
Code/Arbitor/Themes/Gallery/: Gallery.xaml
Code/Arbitor/Themes/GanttControl/: GanttChart.xaml  GanttChartItems.xaml  GanttControl.xaml  GanttGrid.xaml  GanttSchedule.xaml
Code/Arbitor/Themes/GridPrintPreviewControl/: GridPrintPreviewControl.xaml
Code/Arbitor/Themes/GroupBar/: GroupBar.xaml
Code/Arbitor/Themes/HierarchyNavigator/: HierarchyNavigator.xaml
Code/Arbitor/Themes/IntegerTextBox/: IntegerTextBox.xaml
Code/Arbitor/Themes/MSControl/: Button.xaml  Calendar.xaml  CheckBox.xaml  ComboBox.xaml  DataGrid.xaml  DatePicker.xaml  Expander.xaml  FlatButton.xaml  FlatPrimaryButton.xaml  FlatToggleButton.xaml  Label.xaml  (+32 more)
Code/BuildSystem/AzurePipelines/: Android-arm64.yml  Android-x64.yml  Linux-x64.yml  MacOS-x64.yml  Windows-x64.yml  clang-tidy.yml
Code/BuildSystem/CMake/: nsUtils.cmake  toolchain-steamrt.cmake
Code/Tools/ArchiveTool/: ArchiveTool.cpp  finalize.cmake
Code/Tools/DependencyAnalysis/: DependencyAnalysis.cpp
Code/Tools/Fileserve/: App.cpp  CMakeLists.txt  Fileserve.cpp  Fileserve.h  FileserveApp.cpp  Gui.cpp
Code/Tools/GdbProxy/: CMakeLists.txt
Code/Tools/HeaderCheck/: HeaderCheck.cpp
Code/Tools/Inspector/: CMakeLists.txt  Inspector.cpp
Code/Tools/Libs/ModelImporter2/: CMakeLists.txt  ModelImporter.cpp  ModelImporter.h  ModelImporterDLL.h
Code/Tools/Libs/ModelImporter2/Importer/: Importer.cpp  Importer.h
Code/Tools/Libs/ModelImporter2/ImporterAssimp/: AssimpAnimationImport.cpp  AssimpMaterialImport.cpp  AssimpMeshImport.cpp  AssimpUtils.cpp  ImporterAssimp.cpp  ImporterAssimp.h
Code/Tools/Libs/ModelImporter2/ImporterFBX/: ImporterOFBX.cpp  ImporterOFBX.h
Code/Tools/Libs/ModelImporter2/ImporterMagicaVoxel/: ImporterMagicaVoxel.cpp  ImporterMagicaVoxel.h
Code/Tools/Libs/ModelImporter2/ImporterSourceBSP/: ImporterSourceBSP.cpp  ImporterSourceBSP.h
Code/Tools/MiniDumpTool/: MiniDumpTool.cpp
Code/Tools/Player/: CMakeLists.txt  Player.cpp  Player.h
Code/Tools/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
Code/Tools/StackResolver/: CMakeLists.txt  StackResolver.cpp
Code/Tools/StaticLinkUtil/: CMakeLists.txt  StaticLinkUtil.cpp
Code/Tools/TexConv/: CMakeLists.txt  ParseChannelMapping.cpp  ParseOptions.cpp  ParseUtils.cpp  TexConv.cpp  TexConv.h
Code/UnitTests/CoreTest/: CMakeLists.txt  CoreTest.cpp  CoreTestPCH.h
Code/UnitTests/RendererTest/: CMakeLists.txt  RendererTest.cpp  RendererTestPCH.h
Code/UnitTests/RendererTest/Advanced/: AdvancedFeatures.cpp  AdvancedFeatures.h  OffscreenRenderer.cpp  OffscreenRenderer.h
Code/UnitTests/RendererTest/Basics/: Basics.cpp  Basics.h  BlendStates.cpp  LineRendering.cpp  PipelineStates.cpp  PipelineStates.h  RasterizerStates.cpp  Readback.cpp  Readback.h  ReadbackBuffer.cpp  ReadbackBuffer.h  ShaderCompilerTest.cpp  ShaderCompilerTest.h  SwapChain.cpp  SwapChain.h  Textures.cpp
Code/UnitTests/RendererTest/TestClass/: TestClass.cpp  TestClass.h
Code/UnitTests/TestFramework/: TestFrameworkPCH.h
(+242 files in other folders)
